[build-system]
requires=["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "groupmeme"
version = "0.0.1"
authors = [
  { name="Ryan Bell", email="ryan.bell62101@gmail.com" },
]
description = "Simple GroupMe API client library"
readme = "README.md"
requires-python = ">= 3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "requests"
]

[project.urls]
"Homepage" = "https://github.com/raian621/groupmeme"
"Bug Tracker" = "https://github.com/raian621/groupmeme/issues"