[build-system]
requires=["hatchling"]
build-backend = "hatchling.build"

[project]
name = "groupmeme"
version = "0.0.7"
authors = [
  { name="Ryan Bell", email="ryan.bell62101@gmail.com" },
]
description = "Simple GroupMe API library"
readme = "README.md"
requires-python = ">= 3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "requests",
  "idna",
  "urllib3",
  "certifi"
]

[project.urls]
"Source" = "https://github.com/raian621/groupmeme"
"Bug Tracker" = "https://github.com/raian621/groupmeme/issues"
"Documentation" = "https://raian621.github.io/groupmeme"

[tool.hatch.build]
exclude = ["tests*", "docs*", "*requirements.txt", "Makefile", "pip-dev.sh"]